fix: switched to commonjs for deployment

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "ai-agent-email",
     "version": "1.0.0",
     "main": "index.js",
-    "type": "module",
+    "type": "commonjs"
+,
     "scripts": {
       "start": "node index.js"
     },
