--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "dotenv": "^16.5.0",
-        "express": "^4.18.2",
+        "express": "^4.21.2",
         "express-session": "^1.18.1",
         "googleapis": "^148.0.0"
     }
